--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title></title>
 </head>
 <body>
-    64011512 Chatchaya Tuangsubsin rev1
+    64011512 Jinnie Tuangsubsin rev1
 </body>
 </html>
